# mmpug_rviz_multi_waypoint_plugin

./: .gitignore  CMakeLists.txt  package.xml  plugin_description.xml
ogre_media/materials/scripts/: waypoint_line.frag  waypoint_line.geom  waypoint_line.material  waypoint_line.program  waypoint_line.vert
src/: multi_waypoint.cpp  multi_waypoint.h
