<package>
  <name>rviz_multi_waypoint_plugin</name>
  <version>0.10.5</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_multi_waypoint_plugin</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>media_export</run_depend>
  

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
      <media_export ogre_media_path="${prefix}/ogre_media/materials/scripts" />
  </export>
</package>
